Update: Spacing and fixed sidebar

--- a/app.css
+++ b/app.css
@@ -5,4 +5,5 @@
 :root {
   --light-gray: #dcdcdc;
   --white: #fff;
+  --light-purple: #ede9fe;
 }
